# footprints

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_NOTES.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_FEATURES.md  Cargo.toml  DATA_MODEL_NOTES.md  Dockerfile  FEATURES_BACKLOG.md  FEATURES_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NEXT_STEPS.md  NIX_SETUP.md  PERF_NOTES.md  README.md  docker-compose.yml  flake.nix  generate_jazz_data.rs
.github/workflows/: tests.yml
src/: lib.rs  main.rs  test_utils.rs
src/api/: mod.rs
src/db/: mod.rs  tests.rs
src/images/: cache.rs  deezer.rs  lastfm.rs  mod.rs  musicbrainz.rs  types.rs
src/importers/: lastfm.rs  listenbrainz.rs  mod.rs
src/models/: mod.rs  scrobble.rs  sync_config.rs
src/reports/: diversity.rs  mod.rs  novelty  novelty.rs  tests.rs  transitions.rs  yearly.rs
src/reports/heatmap/: mod.rs  tests.rs
src/reports/sessions/: mod.rs  tests.rs
src/sync/: mod.rs  scheduler.rs
templates/: index.html  scripts.js  styles.css
